# ruea-dashboard

./: .env.example  .gitattributes  .gitignore  README.md  inspeccionar_excel.py
api/: .env.example  README.md  pyproject.toml
api/src/app/: main.py
api/src/app/core/: config.py  security.py
api/src/app/models/: responses.py
api/src/app/routers/: admin.py  public.py
api/src/app/services/: cache.py  duck.py  etl.py  meta.py  paths.py  textnorm.py  validators.py
dashboard-ruea/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard-ruea/src/: App.tsx  api.ts  index.css
dashboard-ruea/src/components/: DashboardTabs.tsx  DataTable.tsx  ErrorBoundary.tsx  Filters.tsx  Table.tsx
dashboard-ruea/src/layouts/: SiteLayout.tsx  TabsOnly.tsx
dashboard-ruea/src/pages/Dashboards/: Estadisticas.tsx  General.tsx
data/: MACRO MADRE SDR.xlsx  MACRO MADRE SDR_resumen_hojas.csv
data/archive/2025-11-26T20-53-59Z/: duckdb.db  meta.json
data/archive/2025-11-27T01-21-15Z/: quality_report_ruea.xlsx
data/archive/2025-11-27T01-21-15Z/parquet/: ruea.parquet
data/current/: meta.json  quality_report_ruea.xlsx
infra/: api.Dockerfile  docker-compose.yml
scripts/: dev_down.sh  dev_up.sh
