[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portal-alcaldia-api"
version = "0.1.0"
description = "API pública (lectura) + endpoint maestro de actualización"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "python-multipart>=0.0.9",
  "duckdb>=1.0",
  "polars>=1.6",
  "pandas>=2.2",
  "openpyxl>=3.1",
  "pandera>=0.20",
  "orjson>=3.10",
  "pyarrow>=16" 
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["app*"]

[tool.setuptools.package-data]
"app" = ["static/openapi/*"]






